Bilgi Merkezi and Main Page menus are completed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_500">
+    android:orientation="vertical"
+    android:background="#ffffff"
+    android:padding="10dp" >
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:fillViewport="true">
+        android:layout_height="0dp"
+        android:layout_weight=".5"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            android:orientation="vertical">
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:layout_marginRight="5dp"
+            android:gravity="center"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/circular_button"
+            >
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="50pt"
-                android:layout_marginBottom="356dp"
-                android:text="Giriş"
-                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                android:text="Patent ve Faydalı Model"
                 android:textColor="@color/white"
-                android:textSize="50dp"
-                app:layout_constraintBottom_toTopOf="@+id/nav_view"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:textSize="25sp"
+                android:textAlignment="center"
+                android:padding="15px"
+                android:layout_marginTop="120px"
+                android:layout_marginBottom="80px"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/başvuruPatent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/red"
+                android:text="Başvuru Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/araştırmaPatent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/blue"
+                android:text="Araştırma Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
         </LinearLayout>
-    </ScrollView>
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:background="@drawable/circular_button"
+            android:backgroundTint="@color/red">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Marka"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textAlignment="center"
+                android:padding="15px"
+                android:layout_marginTop="120px"
+                android:layout_marginBottom="80px"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/başvuruMarka"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/blue"
+                android:text="Başvuru Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/araştırmaMarka"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/lighter_dark_blue"
+                android:text="Araştırma Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".5"
+        android:layout_marginBottom="25px"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:background="@drawable/circular_button"
+            android:backgroundTint="@color/blue">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tasarım"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textAlignment="center"
+                android:padding="15px"
+                android:layout_marginTop="120px"
+                android:layout_marginBottom="80px"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/başvuruTasarım"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/lighter_dark_blue"
+                android:text="Başvuru Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/araştırmaTasarım"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/red"
+                android:text="Araştırma Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:orientation="vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:background="@drawable/circular_button"
+            android:backgroundTint="@color/light_gray">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Coğrafi İşaret"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textAlignment="center"
+                android:padding="15px"
+                android:layout_marginTop="120px"
+                android:layout_marginBottom="80px"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/başvuruİşaret"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circular_button"
+                android:backgroundTint="@color/blue"
+                android:text="Başvuru Yap"
+                android:textAllCaps="false"
+                android:padding="40px"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:layout_marginBottom="80px"/>
+
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -40,12 +229,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:layout_weight="1"
         android:background="?android:attr/windowBackground"
-        app:itemBackground="@color/lighter_dark_blue"
-        app:itemIconTint="@color/red"
-        app:itemTextColor="@color/red"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"/>
 
     <!---
     <fragment
@@ -62,4 +247,4 @@
         app:layout_constraintVertical_bias="1.0"
         app:navGraph="@navigation/mobile_navigation" />  -->
 
-</RelativeLayout>
+</LinearLayout>
