--- a/app/src/main/res/layout/fragment_bilgi_merkezi.xml
+++ b/app/src/main/res/layout/fragment_bilgi_merkezi.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +7,22 @@
     android:background="@color/white"
     >
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Bilgi Merkezi"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textSize="40sp"
+        android:padding="20px"
+        android:background="@color/lighter_dark_blue"
+
+        ></TextView>
+
     <ScrollView
+        android:layout_below="@id/title"
+        android:id="@+id/scrollMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="150px"
@@ -21,24 +35,12 @@
             android:layout_marginBottom="150px"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bilgi Merkezi"
-                android:textAlignment="center"
-                android:textColor="@color/red"
-                android:textSize="40sp"
-                android:padding="20px"
-                android:layout_marginBottom="50px"
-                android:background="@color/lighter_dark_blue"
 
-                ></TextView>
 
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/istatik"
-                android:layout_below="@+id/title"
+                android:layout_marginTop="50px"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50px"
