--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ffffff"
-    android:padding="10dp" >
+    android:background="@color/white"
+    >
 
     <LinearLayout
+        android:id="@+id/Linear1"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginRight="5dp"
             android:gravity="center"
-            android:layout_marginBottom="5dp"
             android:background="@drawable/circular_button"
+            android:layout_margin="20px"
             >
 
             <TextView
@@ -66,15 +67,14 @@
 
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:background="@drawable/circular_button"
-            android:backgroundTint="@color/red">
+            android:backgroundTint="@color/red"
+            android:layout_margin="20px">
 
             <TextView
                 android:layout_width="match_parent"
@@ -120,22 +120,24 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/Linear2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:layout_marginBottom="25px"
-        android:orientation="horizontal">
+        android:layout_below="@id/Linear1"
+        android:layout_above="@id/nav_view"
+        android:orientation="horizontal"
+        >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
             android:gravity="center"
             android:background="@drawable/circular_button"
-            android:backgroundTint="@color/blue">
+            android:backgroundTint="@color/blue"
+            android:layout_margin="20px">
 
             <TextView
                 android:layout_width="match_parent"
@@ -178,15 +180,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
             android:gravity="center"
             android:background="@drawable/circular_button"
-            android:backgroundTint="@color/light_gray">
+            android:backgroundTint="@color/light_gray"
+            android:layout_margin="20px"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -222,29 +224,23 @@
 
 
 
+
+
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:layout_weight="0"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu"/>
+        app:itemBackground="@color/lighter_dark_blue"
+        app:itemIconTint="@color/red"
+        app:itemTextColor="@color/red"
+        app:menu="@menu/bottom_nav_menu" />
 
-    <!---
-    <fragment
-        android:id="@+id/nav_host_fragment_giris"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:navGraph="@navigation/mobile_navigation" />  -->
 
-</LinearLayout>
+
+</RelativeLayout>
