--- a/app/src/main/res/layout/fragment_giris.xml
+++ b/app/src/main/res/layout/fragment_giris.xml
@@ -1,27 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ffffff"
-    android:padding="10dp" >
+    android:background="@color/white"
+    >
 
     <LinearLayout
+        android:id="@+id/Linear1"
+        android:layout_alignParentTop="true"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginRight="5dp"
             android:gravity="center"
-            android:layout_marginBottom="5dp"
             android:background="@drawable/circular_button"
+            android:layout_margin="20px"
             >
 
             <TextView
@@ -66,15 +67,14 @@
 
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:background="@drawable/circular_button"
-            android:backgroundTint="@color/red">
+            android:backgroundTint="@color/red"
+            android:layout_margin="20px">
 
             <TextView
                 android:layout_width="match_parent"
@@ -120,22 +120,24 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/Linear2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight=".5"
-        android:layout_marginBottom="25px"
-        android:orientation="horizontal">
+        android:layout_below="@id/Linear1"
+        android:layout_above="@id/nav_view"
+        android:orientation="horizontal"
+        >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
             android:gravity="center"
             android:background="@drawable/circular_button"
-            android:backgroundTint="@color/blue">
+            android:backgroundTint="@color/blue"
+            android:layout_margin="20px">
 
             <TextView
                 android:layout_width="match_parent"
@@ -178,15 +180,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight=".5"
             android:orientation="vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
             android:gravity="center"
             android:background="@drawable/circular_button"
-            android:backgroundTint="@color/light_gray">
+            android:backgroundTint="@color/light_gray"
+            android:layout_margin="20px"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -222,6 +224,9 @@
 
 
 
+
+
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
@@ -231,6 +236,12 @@
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu"/>
+
+
+
+</RelativeLayout>
+
+
 
     <!---
     <fragment
@@ -247,4 +258,4 @@
         app:layout_constraintVertical_bias="1.0"
         app:navGraph="@navigation/mobile_navigation" />  -->
 
-</LinearLayout>
+
