--- a/app/src/main/res/layout/fragment_kurumsal.xml
+++ b/app/src/main/res/layout/fragment_kurumsal.xml
@@ -24,6 +24,7 @@
             android:paddingBottom="@dimen/activity_vertical_margin">
 
         <FrameLayout
+            android:id="@+id/frameKurumsal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -63,6 +64,7 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/frameKurumsal2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -102,6 +104,7 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/frameKurumsal3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -141,6 +144,7 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/frameKurumsal4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -180,6 +184,7 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/frameKurumsal5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
